# atlas

./: .gitignore  ATLAS_INTELLIGENCE.md  ATLAS_MANIFEST.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
ai_services/: README.md
atlas/: config.py
atlas_investment_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/: README.md
docs/: ATLAS_ARCHITECTURE.md  ATLAS_CONSTITUTION.md  ATLAS_PRODUCT.md  ATLAS_ROADMAP.md  AnalysisCleanupPlan.md  Architecture.md  ArchitectureConsolidation.md  CompanyAnalysis.md  DailyBrief.md  DecisionEngine.md  DecisionLog.md  DeprecatedCommands.md  DevelopmentGuide.md  Discovery.md  KnowledgeDomain.md  LegacyConsolidationPlan.md  PortfolioDomain.md  ProjectStructure.md  ReleaseCandidate.md  ResearchDomain.md  SPRINT_36_SUMMARY.md  SprintHistory.md  WatchlistEngineMigrationPlan.md  WatchlistIntelligence.md  WatchlistTypeMigrationPlan.md
frontend/: README.md  package.json  tsconfig.json
infrastructure/: README.md
scripts/: run_daily_brief_demo.sh  verify_release_candidate.sh
shared/: README.md
tests/: test_analyze_cli.py  test_architecture_boundaries.py  test_atlas_edge_foundation.py  test_atlas_foundation.py  test_capability_export_inputs.py  test_capability_json_export.py  test_company_analysis.py  test_company_analysis_capability.py  test_company_analysis_core_metadata.py  test_company_analysis_engine_export.py  test_company_analysis_export.py  test_company_analysis_merge.py  test_company_analysis_metadata_flags.py  test_comparison.py  test_conversation_engine.py  test_daily_brief.py  (+62 more)
(+152 files in other folders)
