[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-investment-os"
version = "0.1.0"
description = "Private investment research platform for AI infrastructure"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.scripts]
atlas = "atlas.cli.main:app"

[tool.setuptools.packages.find]
include = ["atlas*"]
namespaces = true

[tool.setuptools.package-data]
atlas = ["database/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
